Added Snapchat Pixel

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,20 @@
     gtag('config', 'UA-10315473-8');
   </script>
 
-
+  <!-- Snap Pixel Code -->
+  <script type='text/javascript'>
+    (function (e, t, n) {
+      if (e.snaptr) return; var a = e.snaptr = function () { a.handleRequest ? a.handleRequest.apply(a, arguments) : a.queue.push(arguments) };
+      a.queue = []; var s = 'script'; r = t.createElement(s); r.async = !0;
+      r.src = n; var u = t.getElementsByTagName(s)[0];
+      u.parentNode.insertBefore(r, u);
+    })(window, document,
+      'https://sc-static.net/scevent.min.js');
+    snaptr('init', '671fc0e7-c0b6-4f0e-bca4-242910e77b19', {
+      'user_email': '__INSERT_USER_EMAIL__'
+    });
+    snaptr('track', 'PAGE_VIEW');
+  </script>
 </head>
 
 <body>
